# shiny-for-python-getting-started

./: README.md  hello.py  pyproject.toml
.github/workflows/: docker-image-shiny-meets-fastapi.yml  docker-image-shinylive-nginx.yml
app_from_gh_template/: .gitignore  README.md  hello.py  pyproject.toml
basic_app/: app.py  hello.py  pyproject.toml
basic_app_core/: Dockerfile  README.md  app.py  hello.py  pyproject.toml
deployment/docker-compose/: README.md  docker-compose.lb.yml  docker-compose.yml
deployment/docker-compose/files/: nginx.conf
deployment/k8s/: README.md  shiny-service.yml
docs/: app.json
routes_example_app/: Dockerfile  README.md  app.py  hello.py  pyproject.toml
shinylive_quarto/: .gitignore  README.md  basic_app.qmd  hello.py  pyproject.toml
shinylive_without_quarto/: .dockerignore  Dockerfile  README.md  hello.py  pyproject.toml
