[project]
name = "shiny-for-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "shiny>=1.2.1",
]

[tool.uv.workspace]
members = ["routes_example_app", "shinylive_quarto", "shinylive_without_quarto"]
