[project]
name = "app-from-gh-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faicons>=0.2.2",
    "geopy>=2.4.1",
    "ipyleaflet>=0.19.2",
    "requests>=2.32.3",
    "shiny>=1.2.1",
    "shinywidgets>=0.5.1",
]
